--- a/style.css
+++ b/style.css
@@ -31,7 +31,13 @@ button {
 
 button:active {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-  }
+}
+
+a {
+    background-color: var(--button-color);
+    color: black;
+    text-decoration: none;
+}
   
 .high_score {
     margin-left: 50px;
@@ -89,3 +95,7 @@ button:active {
 .end {
     display: none;
 }
+
+.hidden {
+    display: none;
+  }
