--- a/style.css
+++ b/style.css
@@ -124,18 +124,35 @@ a {
     display: block;
     margin: 30px auto;
     text-align: center;
-    width: 70%;
     padding: 20px;
-    /* font-size: 42px; */
-    /* border: 2px solid black; */
+    font-size: 42px;
+    border: 2px solid black;
 }
 
 .score {
     display: inline;
     border: 2px solid black;
+    margin: 30px 0 30px 0;
     padding: 20px;
-
+    font-size: 20px;
 }
+
+.initials {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid black;
+    padding: 20px;
+    font-size: 20px;
+    margin: 30px 0 30px 0;
+}
+
+.submit {
+    margin-left: 50px;
+    margin-right: 50px;
+    font-size: 20px;
+}
+
 /* .final_score {
     display: block;
     margin: 30px auto;
