--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     margin: 0;
     padding: 0;
     background-color: var(--back-color);
+    font-family: 'Crimson Text', serif;
 }
 
 header {
@@ -134,7 +135,7 @@ a {
     border: 2px solid black;
     margin: 30px 0 30px 0;
     padding: 20px;
-    font-size: 20px;
+    font-size: 32px;
 }
 
 .initials {
@@ -143,13 +144,26 @@ a {
     align-items: center;
     border: 2px solid black;
     padding: 20px;
+    font-size: 26px;
+    margin: 30px 0 30px 20px;
+}
+
+input[type="text"] {
+    width: 200px;
+    height: 30px;
+    font-size: 26px;
+    margin: 0 20px 0 20px;
+    background-color: var(--button-color);
+    border: 2px solid var(--button-outline);
+}
+
+input::placeholder {
+    color: black;
     font-size: 20px;
-    margin: 30px 0 30px 0;
+    text-align: center;
 }
 
 .submit {
-    margin-left: 50px;
-    margin-right: 50px;
     font-size: 20px;
 }
 
