--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ a {
 .questionArray {
     border: 2px solid blue;
     padding: 20px;
+    width: 600px;
 }
 
 .prompt {
@@ -103,7 +104,6 @@ a {
     margin: 10px;
     padding: 10px;
     font-size: 32px;
-
 }
 
 .optionsList {
