--- a/style.css
+++ b/style.css
@@ -94,20 +94,20 @@ a {
 }
 
 .questionArray {
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     padding: 20px;
     width: 600px;
 }
 
 .prompt {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     margin: 10px;
     padding: 10px;
     font-size: 32px;
 }
 
 .optionsList {
-    border: 2px solid red;
+    /* border: 2px solid red; */
     margin: 10px;
     padding: 10px;
     display: flex;
@@ -115,7 +115,7 @@ a {
 }
 
 .optionItem {
-    border: 2px solid green;
+    /* border: 2px solid green; */
     margin: 10px;
     padding: 10px;
     font-size: 20px;
@@ -126,11 +126,11 @@ a {
     justify-content: center;
     align-items: center;
     margin: 10px;
-    border: 2px solid purple;
+    /* border: 2px solid purple; */
 }
 
 .feedback {
-    border: 2px solid maroon;
+    /* border: 2px solid maroon; */
     margin: 10px;
     padding: 10px;
     font-size: 20px;
@@ -147,7 +147,7 @@ a {
 }
 
 .explanation {
-    border: 2px solid tomato;
+    /* border: 2px solid tomato; */
     margin: 10px;
     padding: 10px;
     font-size: 20px;
@@ -160,12 +160,12 @@ a {
     text-align: center;
     padding: 20px;
     font-size: 42px;
-    border: 2px solid black;
+    /* border: 2px solid black; */
 }
 
 .score {
     display: inline;
-    border: 2px solid black;
+    /* border: 2px solid black; */
     margin: 30px 0 30px 0;
     padding: 20px;
     font-size: 32px;
@@ -175,7 +175,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid black;
+    /* border: 2px solid black; */
     padding: 20px;
     font-size: 26px;
     margin: 30px 0 30px 20px;
@@ -229,12 +229,12 @@ input::placeholder {
     align-items: flex-start;
     margin: 10px;
     padding: 10px;
-    border: 2px solid chartreuse;
+    /* border: 2px solid chartreuse; */
 }
 
 .highscores {
     font-size: 36px;
-    border: 2px solid black;
+    /* border: 2px solid black; */
     width: 200px;
     text-align: center;
     margin: 10px;
